<resources>
    <string name="app_name">惠尔仕健康</string>

    <string name="submit">提交</string>
    <string name="logout">退出账户</string>

    <string name="feedback_title">反馈</string>
    <string name="feedback_edit_hint">期待您的反馈，不超过200字</string>

    <string name="agenda_title">日程</string>
    <string name="agenda_index_popup_remind_manage">提醒管理</string>
    <string name="agenda_index_popup_activity_signup">活动报名</string>
    <string name="agenda_index_popup_watchword_setting">口号设置</string>

    <string name="watchword_settings_title">口号设置</string>
    <string name="watchword_settings_hint">口号最多15个字</string>

    <string name="confirm">确认</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="app_instruction_title">产品详细标题</string>
    <string name="app_instruction_details">产品详细介绍</string>

    <string name="view_agenda_from_server">惠尔仕相册</string>
    <string name="view_agenda_take_photo">拍照</string>
    <string name="view_agenda_from_local">从本地选取</string>

    <string-array name="me_function_name">
        <item>会员卡</item>
        <item>会籍资料</item>
        <item>惠尔仕商城</item>
        <item>我的设备</item>
        <item>反馈</item>
        <item>设置</item>
    </string-array>

</resources>
