<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="1dp">

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        app:qmui_backgroundColor="@color/app_grey"
        app:qmui_radiusTopLeft="10dp"
        app:qmui_radiusTopRight="10dp">

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_server"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:qmui_backgroundColor="@color/app_white"
            android:text="@string/view_agenda_from_server" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_take_photo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:qmui_backgroundColor="@color/app_white"
            android:text="@string/view_agenda_take_photo" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_local"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:qmui_backgroundColor="@color/app_white"
            android:text="@string/view_agenda_from_local" />

    </com.qmuiteam.qmui.widget.roundwidget.QMUIRoundLinearLayout>

</LinearLayout>

