<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/arrow_up_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:src="@drawable/qmui_popup_arrow_up"
        android:visibility="invisible" />


    <LinearLayout
        android:id="@+id/box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/round_rect_bg"
        android:divider="@color/qmui_config_color_white"
        android:dividerPadding="5dp"
        android:orientation="vertical"
        android:showDividers="middle">

        <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
            android:id="@+id/btn_remind_management"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingVertical="15dp"
            android:text="@string/agenda_index_popup_remind_manage"
            android:textColor="@color/qmui_config_color_white" />

        <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
            android:id="@+id/btn_activity_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingVertical="15dp"
            android:text="@string/agenda_index_popup_activity_signup"
            android:textColor="@color/qmui_config_color_white" />

        <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
            android:id="@+id/btn_watchword_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingVertical="15dp"
            android:text="@string/agenda_index_popup_watchword_setting"
            android:textColor="@color/qmui_config_color_white" />

    </LinearLayout>

</LinearLayout>
